@@ -1,6 +1,7 @@
 Revision history for Net-Amazon-DynamoDB-Marshaler
 
 {{$NEXT}}
+        - Fix force_type so that it converts vals, and drops undefs.
 
 0.04  2017-07-21 01:11:07 UTC
         - Added force_type option to dynamodb_marshal()
